openshift/components/api/base/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: alcs-api
  annotations:
    description: Exposes and load balances the application pods
spec:
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  selector:
    deploymentconfig: alcs-api
