openshift/components/api/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: alcs-api
spec:
  to:
    kind: Service
    name: alcs-api
